--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -49,7 +49,7 @@ dopepod
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link" href="/?view=password">
+                <a class="password-link color-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
@@ -168,7 +168,7 @@ dopepod
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link" href="/?view=password">
+                <a class="password-link color-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
@@ -252,7 +252,7 @@ dopepod
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link" href="/?view=password">
+                <a class="password-link color-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
@@ -346,7 +346,7 @@ dopepod
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link" href="/?view=password">
+                <a class="password-link color-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
