--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -21,9 +21,9 @@
     {% endfor %}
   </div>
   {% if results.view == 'list' %}
-  <div class="row collapse results-collapse view-collapse-{{ results.drop }} show">
+  <div class="row collapse results-collapse show">
   {% else %}
-  <div class="row collapse results-collapse view-collapse-{{ results.drop }}">
+  <div class="row collapse results-collapse">
   {% endif %}
     <div class="col-lg-3 col-md-6 col-sm-12 browse-results">
       <ul class="browse-results-list">
