--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -124,7 +124,7 @@
     </ul>
     <form class="form-inline search-form d-inline-block d-xl-none" method="GET" action="{% url 'search' %}">
       <label for="q" class="sr-only">Search for podcasts</label>
-      <input class="form-control q" type="text" name="q" type="search" placeholder="Search for podcasts"
+      <input class="q" type="text" name="q" type="search" placeholder="Search for podcasts"
       aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
       <button class="search-button" type="submit">
         <span>
