--- a/index/static/style.css
+++ b/index/static/style.css
@@ -925,8 +925,7 @@ a.color-link :hover {
 /* EPISODES */
 .hidden-row {
   padding: 0 !important;
-  background: #ddd;
-  color: rgb(46, 46, 46);
+  background: rgba(204, 204, 204, .5);
 }
 .more-collapse {
   text-align: justify;
@@ -940,9 +939,6 @@ a.color-link :hover {
   table-layout: fixed;
   margin-top: 10px;
   width: 100%;
-}
-#episodes-table tr .hidden-row {
-
 }
 #episodes-table th, #episodes-table td {
   padding: 5px;
@@ -1301,8 +1297,10 @@ hr.h-line {
 /* PLAYER */
 #player {
   padding: 0;
+  color: rgb(46, 46, 46);
 }
 #player-wrapper a, #player-wrapper a:hover {
+  color: rgb(46, 46, 46);
 }
 #player-wrapper {
   z-index: 9000;
@@ -1311,7 +1309,7 @@ hr.h-line {
   bottom: 0;
   right: 0;
   padding: 10px 10px 0;
-  border: 2px solid rgba(0, 191,165, 1);
+  border: 1px solid rgba(46, 46, 46 , 1);
   border-bottom: none;
   border-radius: .25rem .25rem 0 0;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
@@ -1348,8 +1346,9 @@ hr.h-line {
 }
 #player-episode {
   font-size: 12px;
-  height: 50px;
+  height: 52px;
   margin-bottom: 3px;
+  overflow: hidden;
 }
 #player-episode span {
 }
