--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -20,6 +20,11 @@
           Subscriptions
         </a>
       </li>
+      <li>
+        <a class="dopebar-link playlist-link" href="{% url 'playlist' %}">
+          Playlist
+        </a>
+      </li>
       {% endif %}
     </ul>
   </div>
@@ -94,6 +99,11 @@
         <li>
           <a class="dopebar-link subscriptions-link" href="{% url 'subscriptions' %}">
             Subscriptions
+          </a>
+        </li>
+        <li>
+          <a class="dopebar-link playlist-link" href="{% url 'playlist' %}">
+            Playlist
           </a>
         </li>
         <li>
