--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -146,7 +146,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       </div>
     </div>
     <div class="col-12 collapse show" id="episodes-collapse">
-      {% if episodes %}
+      {% if results.episodes %}
         {% include 'episodes.html' %}
       {% endif%}
     </div>
