--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -13,7 +13,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
           <i class="fas fa-arrow-circle-left"></i>
         </button>
         <div class="extra-options">
-          <a class="btn-dope reverse-toggle results-minimize" data-toggle="collapse" href="#results-collapse" aria-expanded="true" aria-controls="results-collapse" aria-label="Minimize">
+          <a class="btn-dope reverse-toggle results-minimize" data-toggle="collapse" href="#results-collapse{{ results.drop }}" aria-expanded="true" aria-controls="results-collapse" aria-label="Minimize">
             {% if request.is_ajax %}
               <i class="fas fa-minus-circle icon"></i>
             {% else %}
@@ -34,7 +34,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       </h1>
     </div>
   </div>
-  <div class="row collapse show results-wrapper" id="results-collapse">
+  <div class="row collapse show results-wrapper" id="results-collapse{{ results.drop }}">
     <div class="col-12 results-buttons">
     {% if results.view == 'grid' %}
       <a class="btn-dope view-button view-icon view-icon-grid d-none" href="{{ results.urls.full_url }}&view=list">
@@ -69,33 +69,33 @@ Listen to episodes of {{ podcast.title }} on dopepod
     {% endif %}
     {% if results.alphabet %}
       {% if results.selected_q|capfirst in results.alphabet %}
-        <a class="btn-dope active toggle" data-toggle="collapse" href="#alphabet-collapse" aria-expanded="false" aria-controls="alphabet-collapse">
+        <a class="btn-dope active toggle" data-toggle="collapse" href="#alphabet-collapse{{ results.drop }}" aria-expanded="false" aria-controls="alphabet-collapse">
           {{ results.selected_q|capfirst }}
         </a>
       {% else %}
-        <a class="btn-dope toggle" data-toggle="collapse" href="#alphabet-collapse" aria-expanded="false" aria-controls="alphabet-collapse">
+        <a class="btn-dope toggle" data-toggle="collapse" href="#alphabet-collapse{{ results.drop }}" aria-expanded="false" aria-controls="alphabet-collapse">
           A-Z
         </a>
       {% endif %}
     {% endif %}
     {% if results.genres %}
       {% if results.selected_genre %}
-        <a class="btn-dope active toggle" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+        <a class="btn-dope active toggle" data-toggle="collapse" href="#genre-collapse{{ results.drop }}" aria-expanded="false" aria-controls="genre-collapse">
           {{ results.selected_genre }}
         </a>
       {% else %}
-        <a class="btn-dope toggle" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+        <a class="btn-dope toggle" data-toggle="collapse" href="#genre-collapse{{ results.drop }}" aria-expanded="false" aria-controls="genre-collapse">
           All Genres
         </a>
       {% endif %}
     {% endif %}
     {% if results.languages %}
       {% if results.selected_language %}
-        <a class="btn-dope active toggle" data-toggle="collapse" href="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
+        <a class="btn-dope active toggle" data-toggle="collapse" href="#language-collapse{{ results.drop }}" aria-expanded="false" aria-controls="language-collapse">
           {{ results.selected_language }}
         </a>
       {% else %}
-        <a class="btn-dope toggle" data-toggle="collapse" href="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
+        <a class="btn-dope toggle" data-toggle="collapse" href="#language-collapse{{ results.drop }}" aria-expanded="false" aria-controls="language-collapse">
           All Languages
         </a>
       {% endif %}
@@ -116,7 +116,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
     {% endif %}
   </div>
     {% if results.alphabet %}
-      <div class="collapse options-collapse" id="alphabet-collapse">
+      <div class="collapse options-collapse" id="alphabet-collapse{{ results.drop }}">
         <div class="options-group alphabet-buttons">
           {% if results.selected_q|capfirst in results.alphabet %}
             <a class="btn-dope options-button alphabet-button nix-button" href="{{ results.urls.q_url }}" id="alphabet-nix">
@@ -144,7 +144,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       </div>
     {% endif %}
     {% if results.genres %}
-      <div class="collapse options-collapse" id="genre-collapse">
+      <div class="collapse options-collapse" id="genre-collapse{{ results.drop }}">
         <div class="options-group genre-buttons">
           {% if results.selected_genre %}
             <a class="btn-dope options-button nix-button" href="{{ results.urls.genre_url }}">
@@ -162,7 +162,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       </div>
     {% endif %}
     {% if results.languages %}
-      <div class="collapse options-collapse" id="language-collapse">
+      <div class="collapse options-collapse" id="language-collapse{{ results.drop }}">
         <div class="options-group language-buttons">
           {% if results.selected_language %}
             <a class="btn-dope options-button nix-button" href="{{ results.urls.language_url }}">
