--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -4,6 +4,11 @@
       <i class="fas fa-bars"></i>
     </a>
     <ul class="d-none d-xl-inline-block">
+      <!-- <li>
+        <a class="dopebar-link dark_theme" href="#">
+          <i class="far fa-lightbulb"></i>
+        </a>
+      </li> -->
       <li>
         <a class="dopebar-link browse-link" href="{% url 'browse' %}">
           Browse
