--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -50,13 +50,12 @@ settings
       <div class="form-check form-check-inline">
         <label class="form-check-label" for="dark_theme">
           {% if profile_form.dark_theme.value %}
-            <input class="form-check-input" type="checkbox" name="dark_theme" id="dark_theme" checked />
+            <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" checked />
           {% else %}
-            <input class="form-check-input" type="checkbox" name="dark_theme" id="dark_theme" />
+            <input class="form-check-input dark_theme" type="checkbox" name="dark_theme" />
           {% endif %}
           Use dark theme
         </label>
-        <i class="far fa-lightbulb"></i>
       </div>
     </div>
   </form>
