--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <!-- PLAYER -->
-      <div class="container fixed-bottom" id="player">
+      <div class="container-fluid fixed-bottom" id="player">
         {% include 'player.html' %}
       </div>
     </div>
